# unitTests

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: LibraryCode.cpp.6875FFDE5F6A6BDD.idx  LibraryCode.hpp.B5EE84AACDC0667B.idx  main.cpp.169E1D2C99569BAF.idx  test.cpp.4E6FA0FDD24DD262.idx
Application/: CMakeLists.txt  main.cpp
GoogleTest/: CMakeLists.txt  test.cpp
MathLibrary/: CMakeLists.txt
MathLibrary/src/: LibraryCode.cpp
